c++: Reject union std::initializer_list [PR102434]

Weird things are going to happen if you define your std::initializer_list
as a union.  In this case, we crash in output_constructor_regular_field.

Let's not allow such a definition in the first place.

	PR c++/102434

gcc/cp/ChangeLog:

	* class.cc (finish_struct): Don't allow union initializer_list.

gcc/testsuite/ChangeLog:

	* g++.dg/cpp0x/initlist128.C: New test.